// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch/> Render switch 1`] = `
<div
  class="form-check form-switch mb-3"
>
  <input
    checked=""
    class="form-check-input"
    id="1"
    role="switch"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="1"
  >
    Test label
  </label>
  <div
    class="form-text"
  >
    <small>
      Some help text
    </small>
  </div>
</div>
`;

exports[`<Switch/> Render uncheked switch 1`] = `
<div
  class="form-check form-switch mb-3"
>
  <input
    class="form-check-input"
    id="1"
    role="switch"
    type="checkbox"
  />
  <label
    class="form-check-label"
    for="1"
  >
    Test label
  </label>
  <div
    class="form-text"
  >
    <small>
      Some help text
    </small>
  </div>
</div>
`;
